[skip ci] Cleanup readme